# ChangeLog for net-libs/rpc2
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rpc2/ChangeLog,v 1.23 2005/10/17 19:19:45 griffon26 Exp $

  17 Oct 2005; Maurice van der Pot <griffon26@gentoo.org> -rpc2-1.25.ebuild:
  Removed old version.

*rpc2-1.28 (23 Sep 2005)

  23 Sep 2005; Maurice van der Pot <griffon26@gentoo.org> +rpc2-1.28.ebuild:
  Added rpc2 1.28 for new coda release 6.0.12

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> rpc2-1.27.ebuild:
  Mark 1.27 stable on alpha

  24 Aug 2005; Aron Griffis <agriffis@gentoo.org> rpc2-1.27.ebuild:
  stable on ia64

  07 Jul 2005; Maurice van der Pot <griffon26@gentoo.org> rpc2-1.27.ebuild:
  Marked stable on x86

  08 Jun 2005; Maurice van der Pot <griffon26@gentoo.org> -rpc2-1.13.ebuild,
  -rpc2-1.19.ebuild, -rpc2-1.20.ebuild, -rpc2-1.22.ebuild,
  -rpc2-1.23.ebuild, rpc2-1.25.ebuild, rpc2-1.27.ebuild:
  Removed old versions. Adapted to changed location of source package.

*rpc2-1.27 (05 May 2005)

  05 May 2005; Maurice van der Pot <griffon26@gentoo.org> +rpc2-1.27.ebuild:
  Added new release.

  05 Feb 2005; Maurice van der Pot <griffon26@gentoo.org> rpc2-1.25.ebuild:
  Stable on x86

*rpc2-1.25 (22 Dec 2004)

  22 Dec 2004; Maurice van der Pot <griffon26@gentoo.org> rpc2-1.23.ebuild,
  +rpc2-1.25.ebuild:
  Marked rpc2-1.23 stable on x86
  Added new version rpc2-1.25

*rpc2-1.23 (23 Oct 2004)

  23 Oct 2004; Maurice van der Pot <griffon26@gentoo.org> rpc2-1.22.ebuild,
  +rpc2-1.23.ebuild:
  Version bump for new coda release
  Marked rpc2-1.22 stable on x86

  12 Aug 2004; Maurice van der Pot <griffon26@gentoo.org> metadata.xml:
  Took over maintenance from Daniel Black <dragonheart@gentoo.org>

  16 Jul 2004; Daniel Black <dragonheart@gentoo.org> rpc2-1.22.ebuild:
  lwp added to dependancies as per bug #53561. Thanks to Peter Jensen
  <gentoo-bugs@pekaje.homeip.netre-vax> and <re-vax@wanadoo.fr>.
