@@ -1,16 +1,42 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 9a5242459ce1751d7870023e38d692b0 ChangeLog 3247
-MD5 d76f83c7ea459ced23c70f97e5d8dc3f files/digest-rpc2-1.27 61
-MD5 7f397cf4cdb57ccdc37cd991c3e22aa4 files/digest-rpc2-1.28 61
-MD5 fdd307ea78fc900a01e57b8151f34d4e metadata.xml 224
+DIST rpc2-1.27.tar.gz 560477
+DIST rpc2-1.28.tar.gz 560597
+DIST rpc2-2.0.tar.gz 623373 RMD160 a7ccbefc25811a1ce02584371d50ae2144b585ba SHA1 b44ee94d741551e65960eb1c102b846c1e8d10bb SHA256 d0aa0620173faeff36a2a4628eb9602125d64556d5126eb28a2d36d06bb0025b
+EBUILD rpc2-1.27.ebuild 693 RMD160 033be7da3450c55cb6130af638ece55bb65d3f06 SHA1 6befd0c88d9146d9887f78cae8ba71ee0c4c62a5 SHA256 a70455ddf68eb5531210b842bb2585851b81ac7183f63ed5be0fcf7a7b9421a8
 MD5 53eaae10ba9f0a9804d5cab6c48fd23f rpc2-1.27.ebuild 693
+RMD160 033be7da3450c55cb6130af638ece55bb65d3f06 rpc2-1.27.ebuild 693
+SHA256 a70455ddf68eb5531210b842bb2585851b81ac7183f63ed5be0fcf7a7b9421a8 rpc2-1.27.ebuild 693
+EBUILD rpc2-1.28.ebuild 697 RMD160 fc2cce3768c754f34d13296679c576d26238b7fa SHA1 e27ae33f51ec0e32eff4071190ecfc741e87c9f4 SHA256 dcd2842fca6cb2c376167d956c41bfb6f391c4d66f46712e71806b8081f93088
 MD5 abaded235389d3007e90a10f79eca90b rpc2-1.28.ebuild 697
+RMD160 fc2cce3768c754f34d13296679c576d26238b7fa rpc2-1.28.ebuild 697
+SHA256 dcd2842fca6cb2c376167d956c41bfb6f391c4d66f46712e71806b8081f93088 rpc2-1.28.ebuild 697
+EBUILD rpc2-2.0.ebuild 696 RMD160 5bd8dab6f38ce876ff25eee7a23f6e86902902b4 SHA1 d6e7e3c39c373cfd936da1e5a10de0f3fbd91fe8 SHA256 546e747abfc5916fe3ed1314350df016ec03a839ab6481a07f225cb2188a5d89
+MD5 d970f0b0602c6c97ef7def4900cf71d6 rpc2-2.0.ebuild 696
+RMD160 5bd8dab6f38ce876ff25eee7a23f6e86902902b4 rpc2-2.0.ebuild 696
+SHA256 546e747abfc5916fe3ed1314350df016ec03a839ab6481a07f225cb2188a5d89 rpc2-2.0.ebuild 696
+MISC ChangeLog 3467 RMD160 6fdb7576cd3942671b2a545e49aa6e980ffadbd6 SHA1 bf02903f421e799a4449fa93758f44271261fe79 SHA256 c7ae8d59c3af21f9c394451655b974b7a0aa9c57f1c1a3e4855715e7428411ec
+MD5 7a3989ffdce77967b9e7cc01740d86ac ChangeLog 3467
+RMD160 6fdb7576cd3942671b2a545e49aa6e980ffadbd6 ChangeLog 3467
+SHA256 c7ae8d59c3af21f9c394451655b974b7a0aa9c57f1c1a3e4855715e7428411ec ChangeLog 3467
+MISC metadata.xml 224 RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a SHA1 69ba0e7a8541e626d9e6cfe04d8dcca7d99711bb SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0
+MD5 fdd307ea78fc900a01e57b8151f34d4e metadata.xml 224
+RMD160 d7d38da55631a7f967c94a2fa7eb5debe5e27a3a metadata.xml 224
+SHA256 4a8875e4f80ebee47dfee31cca6c38e8ab45aada8ef7fce384d96a6aaefc07c0 metadata.xml 224
+MD5 d76f83c7ea459ced23c70f97e5d8dc3f files/digest-rpc2-1.27 61
+RMD160 b2bd7b8fb44af988a69522c663233be730f40811 files/digest-rpc2-1.27 61
+SHA256 3eb58d2d6ce71cee485a177e60c431f13367c695f163e1bdc57942b75b64a4b3 files/digest-rpc2-1.27 61
+MD5 7f397cf4cdb57ccdc37cd991c3e22aa4 files/digest-rpc2-1.28 61
+RMD160 4b56b88ef6e25051865040fed516b0c76c00d50e files/digest-rpc2-1.28 61
+SHA256 a0f97e8fb3b6d52b0965f81613a2fa851754890c8602fcce4956286d9c9f920e files/digest-rpc2-1.28 61
+MD5 0af3ac252834aa25c25b7c168dd6de42 files/digest-rpc2-2.0 226
+RMD160 adf76ee578d76736b67d3c7f39f1526aa386f2f0 files/digest-rpc2-2.0 226
+SHA256 0eb1b8668d4aecf5be020d1a1ca21c2bb14b93e2297d9ccb4c3c469a2c8576fa files/digest-rpc2-2.0 226
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDU/luMGnpIbeahxwRAkjVAJ0VziEDKh6gOg1DmzuJmxDsdcSBGgCgnkSR
-xSJr3u33mwn1TISmY5gGKuk=
-=zUWk
+iD8DBQFEiA3KMGnpIbeahxwRAuSSAJ4qFCU84YFPtU/+ygAoXAeQomsarQCgxABF
+m7UnO3LIuvsoNXsu4bmP4Rw=
+=KE7g
 -----END PGP SIGNATURE-----
