@@ -1,0 +1,3 @@
+MD5 b7512595464742d9b8486f82005c6873 rpc2-2.0.tar.gz 623373
+RMD160 a7ccbefc25811a1ce02584371d50ae2144b585ba rpc2-2.0.tar.gz 623373
+SHA256 d0aa0620173faeff36a2a4628eb9602125d64556d5126eb28a2d36d06bb0025b rpc2-2.0.tar.gz 623373
