@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/rpc2
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/rpc2/ChangeLog,v 1.23 2005/10/17 19:19:45 griffon26 Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/rpc2/ChangeLog,v 1.24 2006/06/08 11:45:06 griffon26 Exp $
+
+*rpc2-2.0 (05 Jun 2006)
+
+  05 Jun 2006; Maurice van der Pot <griffon26@gentoo.org> +rpc2-2.0.ebuild:
+  Added new version 2.0 of rpc2 that introduces strong encryption. Please 
+  read the upstream changelog for details.
 
   17 Oct 2005; Maurice van der Pot <griffon26@gentoo.org> -rpc2-1.25.ebuild:
   Removed old version.
